[package]
name = "dl_edge_driver"
authors = ["aoki"]
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
fetch_edge_driver = { git = "https://github.com/aoki-soft/fetch_edge_driver.git", tag = "0.0.1" }

[build-dependencies]
winres = "0.1.12"
winapi = { version = "0.3.9", features = [ "winnt" ] }

[package.metadata.winres]
OriginalFilename = "dl_edge_driver.exe"
FileDescription = "edge driver ダウンロードツール"
LegalCopyright = "Copyright © 2022 aoki"